--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "jquery": "^2.2.1",
     "moment": "^2.12.0",
     "node-sass": "^3.4.2",
-    "node-uuid": "^1.4.8",
+    "uuid": "^3.0.1",
     "react-addons-test-utils": "^0.14.7",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
